[gd_scene format=3 uid="uid://dnxvxio1xc3kj"]

[ext_resource type="StyleBox" uid="uid://dsm55rfa1xmm4" path="res://ui/assets/basic_panel.tres" id="1_i757p"]
[ext_resource type="Script" uid="uid://bqc2u8semv3i6" path="res://ui/model_info_view.gd" id="2_pl1ku"]
[ext_resource type="Texture2D" uid="uid://cbddlka4k8xs" path="res://ui/assets/Reload.svg" id="3_00am7"]
[ext_resource type="PackedScene" uid="uid://b76k56lpsvxnd" path="res://ui/printable_entry_card.tscn" id="4_1ngue"]

[node name="ModelInfoView" type="PanelContainer" unique_id=1478585159]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
mouse_filter = 1
theme_override_styles/panel = ExtResource("1_i757p")
script = ExtResource("2_pl1ku")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1644965546]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=2011376415]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer" unique_id=1478592964]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Name"
clip_text = true
text_overrun_behavior = 1

[node name="RerenderButton" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=724126116]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
tooltip_text = "Regenerate rendered previews."
icon = ExtResource("3_00am7")
icon_alignment = 1

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer" unique_id=52574019]
layout_mode = 2
size_flags_vertical = 3

[node name="PrintablesScrollContainer" type="ScrollContainer" parent="VBoxContainer/VSplitContainer" unique_id=37384423]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VSplitContainer/PrintablesScrollContainer" unique_id=1674685551]
layout_mode = 2
size_flags_horizontal = 3

[node name="ImageContainer" type="PanelContainer" parent="VBoxContainer/VSplitContainer/PrintablesScrollContainer/VBoxContainer" unique_id=2096255779]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 1

[node name="CoverImage" type="TextureRect" parent="VBoxContainer/VSplitContainer/PrintablesScrollContainer/VBoxContainer/ImageContainer" unique_id=1240338193]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="PrintablesList" type="HFlowContainer" parent="VBoxContainer/VSplitContainer/PrintablesScrollContainer/VBoxContainer" unique_id=1355011890]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PrintableEntryCard" parent="VBoxContainer/VSplitContainer/PrintablesScrollContainer/VBoxContainer/PrintablesList" unique_id=1904036443 instance=ExtResource("4_1ngue")]
layout_mode = 2

[node name="PrintableEntryCard2" parent="VBoxContainer/VSplitContainer/PrintablesScrollContainer/VBoxContainer/PrintablesList" unique_id=1641753820 instance=ExtResource("4_1ngue")]
layout_mode = 2

[node name="RestScrollContainer" type="ScrollContainer" parent="VBoxContainer/VSplitContainer" unique_id=1742707349]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="RestList" type="VBoxContainer" parent="VBoxContainer/VSplitContainer/RestScrollContainer" unique_id=1291393028]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VSplitContainer/RestScrollContainer/RestList" unique_id=1800121227]
layout_mode = 2
text = "Entry"

[node name="Label2" type="Label" parent="VBoxContainer/VSplitContainer/RestScrollContainer/RestList" unique_id=1036776502]
layout_mode = 2
text = "Entry2"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" unique_id=70669308]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer" unique_id=1837006801]
layout_mode = 2

[node name="RenderingStatusLabel" type="Label" parent="VBoxContainer/HBoxContainer2" unique_id=1650181316]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.5529556, 0.55295557, 0.55295557, 1)
text = "Rendering...."

[connection signal="pressed" from="VBoxContainer/HBoxContainer/RerenderButton" to="." method="_on_rerender_button_pressed"]
